--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 
 <body>
     <header class="container text-center">
-        <img src="fotobarbie.jpg" alt="avatar da Sophie" class="rounded-circle" width="150" height="150"
+        <img src="img/blair3.jpg" alt="avatar da Sophie" class="rounded-circle" width="150" height="150"
             srcset="">
-        <p class="lead">Eu sou Sophie_</p>
+        <p class="lead">Eu sou Sophie</p>
         <h1>Eu ensino Inglês</h1>
         <p>Sou estudante e professora de idioma. Ensino língua inglesa para estudantes do Ensino
             Fundamental e Médio. Ensino sobre língua inglesa usando Duolingo, DropBox e Canva. Veja os projetos
             que já desenvolvi!</p>
         <p>Minhas habilidades</p>
         <div>
-            <p class="badge bg-secondary">Duolingo</p>
-            <p class="badge bg-secondary">DropBox</p>
-            <p class="badge bg-secondary">Canva</p>
             <p class="badge bg-secondary">Instagram</p>
+            <p class="badge bg-secondary">Duolingo</p>
+            <p class="badge bg-secondary">Canva</p>
+            <p class="badge bg-secondary">DropBox</p>
         </div>
     </header>
     <main class="container mt-5">
@@ -33,13 +33,11 @@
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img/instagram.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
-                        <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros
-                            favoritos, incluindo informações sobre os autores, datas de publicação e links para compra
-                            na Amazon. A página é estilizada com CSS para uma visualização agradável e usa fontes
-                            externas do Canva e Google Fonts.
+                        <h5 class="card-title">Instagram: Uma plataforma não convencional</h5>
+                        <p class="card-text">Este projeto é uma página web geralmente usada para lazer, porém que apresenta conteúdos diversos de forma rápida e eficiente.
+                             Publicações como reels ou stories disponiveis a todo momento especialmente dedicado a você.
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
                             o projeto</button>
@@ -72,30 +70,19 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <h5 class="modal-title">Instagram: Uma plataforma não convencional</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>O projeto é uma página web criada com HTML e CSS, destinada a exibir uma coleção pessoal de
-                        livros favoritos. O objetivo é criar um ambiente virtual onde seja possível compartilhar
-                        seus livros preferidos, fornecendo uma descrição breve de cada um, incluindo o autor, o ano
-                        de publicação e uma opção de compra.</p>
-                    <p>A estrutura do site é baseada em HTML, que define a semântica e o layout do conteúdo,
-                        enquanto o CSS é usado para estilizar a página visualmente, incluindo cores, tipografia e a
-                        disposição dos elementos.</p>
-                    <p>O HTML organiza o conteúdo em um cabeçalho com o título do site, seguido por uma divisão
-                        principal (.container) que apresenta o propósito do site e a coleção de livros em uma seção
-                        flexível (.livros). Cada livro é destacado em seu próprio contêiner (.livro), mostrando uma
-                        imagem da capa, detalhes do livro e um link de compra. O design responsivo é garantido pelo
-                        uso de uma meta tag viewport e um layout flexível que se adapta a diferentes tamanhos de
-                        tela.</p>
-                    <p>O CSS personaliza o visual do site, usando variáveis para cores, estilizando o texto com uma
-                        fonte importada do Google Fonts e aplicando um esquema de cores suaves e botões interativos.
-                        O uso de HTML e CSS é importante pois assim é possível criar um site acessível e
-                        esteticamente agradável sem a necessidade de scripts complexos, com foco na usabilidade e na
-                        experiência da pessoa usuária. A escolha da tipografia e do esquema de cores contribui para
-                        a atmosfera acolhedora do site, incentivando a exploração da coleção de livros.</p>
-                    <img src="img/projeto-1.png" class="img-fluid w-100"
+                    <p>O projeto é uma página web da empresa Meta, porém usada de forma diferente do comum.</p>
+                    <p>Minha equipe e eu utilizamos o intagram com o objetivo de facilitar os estudos de nossos alunos,
+                        com publicações criativas que atraem a atenção dos mesmos.
+                    </p>
+                    <p>Uma de nossas colaboradoras é a professora Lilian Bittencourt, atua na áre de ensino há 24 anos e tem um conteúdo muito legal, 
+                        que você vai precisar para o dia a dia em uma viagem ou, até mesmo, em uma entrevista de trabalho. O English Yourself surgiu 
+                        de uma necessidade que a própria Lilian viveu quando mais nova e não podia pagar as aulas de idiomas. 
+
+                    <img src="img/ingles.jpeg" class="img-fluid w-100"
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
@@ -110,14 +97,13 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <h5 class="modal-title">Decidindo o Futuro: Mudando sua vida com Duolingo</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>O projeto consiste em uma aplicação web interativa, desenvolvida com HTML, CSS, e JavaScript, que
-                        simula uma experiência narrativa centrada no tema da Inteligência Artificial. O objetivo é
-                        engajar os jogadores em um cenário fictício que aborda o avanço da IA e suas possíveis
-                        consequências para a humanidade, destacando a importância da reflexão ética sobre a tecnologia.
+                    <p>O Duolingo é uma plataforma de ensino de idiomas gratuita que tem popularizado o aprendizado 
+                        de idiomas on-line. Mesmo sendo grátis para utilização, a plataforma conta ainda com a versão
+                        plus paga, para não ter interrupções com anúncios e de outras vantagens.
                     </p>
                     <p>O HTML estrutura o conteúdo da página, dividindo-o em seções como a tela inicial, caixa de
                         perguntas, alternativas de resposta, e o resultado final baseado nas escolhas do jogador. O CSS
