--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         que você vai precisar para o dia a dia em uma viagem ou, até mesmo, em uma entrevista de trabalho. O English Yourself surgiu 
                         de uma necessidade que a própria Lilian viveu quando mais nova e não podia pagar as aulas de idiomas. 
 
-                    <img src="img/ingles.jpeg" class="img-fluid w-100"
+                    <img src="img/instagramfoto.png" class="img-fluid w-100"
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
@@ -105,26 +105,13 @@
                         de idiomas on-line. Mesmo sendo grátis para utilização, a plataforma conta ainda com a versão
                         plus paga, para não ter interrupções com anúncios e de outras vantagens.
                     </p>
-                    <p>O HTML estrutura o conteúdo da página, dividindo-o em seções como a tela inicial, caixa de
-                        perguntas, alternativas de resposta, e o resultado final baseado nas escolhas do jogador. O CSS
-                        é utilizado para estilizar a página, empregando um esquema de cores futurista e layout
-                        responsivo para melhorar a experiência do usuário. JavaScript é usado para adicionar
-                        interatividade ao jogo, manipulando o DOM para atualizar o conteúdo da página conforme as
-                        escolhas do jogador, e determinando o fluxo da narrativa através de uma série de perguntas e
-                        respostas.</p>
-                    <p>O HTML organiza o conteúdo em um cabeçalho com o título do site, seguido por uma divisão
-                        principal (.container) que apresenta o propósito do site e a coleção de livros em uma seção
-                        flexível (.livros). Cada livro é destacado em seu próprio contêiner (.livro), mostrando uma
-                        imagem da capa, detalhes do livro e um link de compra. O design responsivo é garantido pelo
-                        uso de uma meta tag viewport e um layout flexível que se adapta a diferentes tamanhos de
-                        tela.</p>
-                    <p>Os scripts JavaScript incluem módulos para gerar nomes aleatórios, definir as perguntas e as
-                        lógicas de jogo, como iniciar o jogo, apresentar perguntas e alternativas, processar as escolhas
-                        dos jogadores, e exibir o resultado final. Este design modular facilita a manutenção e a
-                        expansão futura do jogo. A importância das ferramentas utilizadas (HTML, CSS, JavaScript) reside
-                        na criação de uma experiência interativa que não apenas entretém, mas também educa os jogadores
-                        sobre a complexidade ética e social da IA, incentivando a reflexão crítica sobre o papel da
-                        tecnologia em nossas vidas.
+                    <p>Os usuários da plataforma praticam vocabulário,
+                    gramática e pronúncia usando repetição espaçada. Os exercícios podem incluir tradução escrita, compreensão
+                    de leitura e fala e histórias curtas. Duolingo oferece 106 cursos de idiomas diferentes
+                    em 41 idiomas, também inclui uma pequena variedade de linguagens construídas.
+                    A empresa usa um modelo freemium com mais de quinhentos milhões de usuários registrados.O Duolingo oferece
+                    um serviço premium que elimina a publicidade e oferece mais recursos.</p>
+                
                     </p>
                     <img src="img/viagemduo.png" class="img-fluid w-100"
                         alt="Imagem representativa do projeto de uma biblioteca online">
